--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -37,6 +37,10 @@
   </div>
 
   <div>
+    <%= form.hidden_field :user_id, value: current_user.id %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
