--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,30 +1,44 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="ms-3 container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <%# <a class="nav-link active" aria-current="page" href="#">Home</a> %>
+    <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Container wrapper -->
+  <div class="container-fluid">
+    <!-- Toggle button -->
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-mdb-toggle="collapse"
+      data-mdb-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+
+    <!-- Collapsible wrapper -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <!-- Navbar brand -->
+      <a class="navbar-brand mt-2 mt-lg-0" href="#">
+        <img
+          src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
+          height="15"
+          alt="MDB Logo"
+          loading="lazy"
+        />
+      </a>
+      <!-- Left links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
             <%= link_to 'Home', root_path, class:"nav-link active" %> 
             <%= link_to 'Friends', friends_path, class:"nav-link" %> 
             <%= link_to 'Add Friend', new_friend_path, class:"nav-link" %> 
             <%= link_to 'About Us', home_about_path, class:"nav-link" %> 
-          </div>
-              </div>
 
-          <% if (user_signed_in?)%>
+      </ul>
+      <!-- Left links -->
+    </div>
+              <% if (user_signed_in?)%>
               <%= link_to 'Edit Profile', edit_user_registration_path, class:"btn btn-outline-secondary me-2" %> 
               <%= link_to 'Logout', destroy_user_session_path,  data: {
                     turbo_method: :delete,
@@ -36,7 +50,48 @@
               <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-outline-success me-2" %> 
 
             <% end %>
-              
-      </div>
+    <!-- Collapsible wrapper -->
 
-    </nav>
+    <!-- Right elements -->
+    <div class="d-flex align-items-center">
+
+ 
+      <!-- Avatar -->
+      <div class="dropdown">
+        <a
+          class="dropdown-toggle d-flex align-items-center hidden-arrow"
+          href="#"
+          id="navbarDropdownMenuAvatar"
+          role="button"
+          data-mdb-toggle="dropdown"
+          aria-expanded="false"
+        >
+          <img
+            src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+            class="rounded-circle"
+            height="25"
+            alt="Black and White Portrait of a Man"
+            loading="lazy"
+          />
+        </a>
+        <ul
+          class="dropdown-menu dropdown-menu-end"
+          aria-labelledby="navbarDropdownMenuAvatar"
+        >
+          <li>
+            <a class="dropdown-item" href="#">My profile</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="#">Settings</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="#">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- Right elements -->
+  </div>
+  <!-- Container wrapper -->
+</nav>
+<!-- Navbar -->
