--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -1,3 +1,4 @@
+<div class="col-4 mb-2">
 
 
 <div class="card text-center " >
@@ -10,3 +11,5 @@
   </div>
   <div class="card-footer text-muted">Added Today by User <%= friend.user_id%> </div>
 </div>
+
+    </div>
