--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,9 +1,18 @@
 
 <%= render @friend %>
 
-<div>
-  <%= link_to "Edit this friend", edit_friend_path(@friend) %> |
-  <%= link_to "Back to friends", friends_path %>
-
+<% if @friend.user == current_user%>
+<div class="row mt-4">
+  <div class="col-2">
+      <%= link_to "Edit this friend", edit_friend_path(@friend), class:"btn btn-warning" %>
+  </div>
+  <div class="col-2">
   <%= button_to "Destroy this friend", @friend, method: :delete, class:"btn btn-danger" %>
+  </div>
+</div>
+<% end%>
+
+<div>
+
+  <%= link_to "Back to friends", friends_path, class:"mt-4" %>
 </div>
