--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,3 +1,4 @@
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  <%= notice%>
+
+<div class="alert alert-dismissible fade show alert-warning" role="alert" data-mdb-color="warning" id="customxD">
+<%= notice%>          <button type="button" class="btn-close" data-mdb-dismiss="alert" aria-label="Close"></button>
 </div>
